input/examples/simple_filtering/iptables.rules
### Filtering rules ###
*filter
# Default policy DROP in filtering chains
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Allow established packets
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A INPUT   -m state --state ESTABLISHED -j ACCEPT

# Requirement 1: Allow arbitrary traffic between internal networks
-A FORWARD -s 172.16.1.0/24 -d 172.16.1.0/24 -j ACCEPT

# Requirement 3: Allow HTTP/HTTPS outgoing traffic
-A FORWARD -s 172.16.1.0/24 -p tcp --dport  80 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -p tcp --dport 443 -j ACCEPT

# Requirement 2: Allow SSH/HTTPS incoming traffic to the corresponding hosts
-A FORWARD -p tcp -d 172.16.1.15 --dport  80 -j ACCEPT
-A FORWARD -p tcp -d 172.16.1.15 --dport 443 -j ACCEPT
-A FORWARD -p tcp -d 172.16.1.16 --dport  22 -j ACCEPT

COMMIT
